--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,55 @@
 version: 2
 jobs:
   build:
-    machine: true
-    # docker:
-    #   - image: yhiraki/circleci:ubuntu1804
+    working_directory: /app
+    docker:
+      - image: docker18.06.3-ce-git
+
     steps:
       - checkout
+      - setup_remote_docker
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
+      - run:
+          name: Load Docker image layer cache
+          command: |
+            set +o pipefail
+            docker load -i /caches/app.tar | true
 
-      # - setup_remote_docker:   # (2)
-      #     docker_layer_caching: true # (3)
+      - run:
+          name: ./configure
+          command: docker build . -f Dockerfile-builder --cache-from=builder -t builder
+      - run:
+          name: make && make install
+          command: |
+            docker run \
+              --security-opt seccomp=unconfined \
+              --name builder \
+              builder \
+              bash -c "make && make install"
+      - run:
+          name: docker commit builder
+          command: docker commit $(docker container ps -aq -f name=builder) builder
+      - run:
+          name: create minimal image
+          command: docker build . --cache-from=app -t app
 
-      # start proprietary DB using private Docker image
-      # with credentials stored in the UI
-      # - run: |
-      #     docker login -u $DOCKER_USER -p $DOCKER_PASS
-      #     docker run -d --name db company/proprietary-db:1.2.3
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/app.tar builder app
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/app.tar
 
-      # build the application image
-      # - run: docker build -t company/app:$CIRCLE_BRANCH .
-      - run: bash ./build.sh
-
-      # deploy the image
-      # - run: docker push company/app:$CIRCLE_BRANCH
+      - run:
+          name: deploy image
+          command: |
+            docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+            docker tag app ${DOCKER_USER}/emacs-minimal:emacs26.1
+            docker push ${DOCKER_USER}/emacs-minimal:emacs26.1
