--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: docker18.06.3-ce-git
+      - image: docker:18.06.3-ce-git
 
     steps:
       - checkout
